modifying server startup, shutdown of test framework